syntax = "proto3";

package dogstatsd.unix;

message UnixDogstatsdMsg {
    int64 timestamp = 1;
    int32 payloadSize = 2;
    bytes payload = 3;
    int32 pid = 4;
    int32 ancillarySize = 5;
    bytes ancillary = 6;
}
